JDK 25 migration: remove AccessController (JEP 486), fix java.lang.IO ambiguity, replace javax.xml.bind with HexFormat/Base64, fix Log4j2 plugin discovery, DataUri Base64 URL-decode, stricter URL validation, Runtime final class, ErrorHarness equality